@@ -10,6 +10,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ***  Add by-design and by-module subtotals to verilator_profcfunc.
 
+**** Add IMPERFECTSCH warning, disabled by default.
+
 * Verilator 3.670 2008/07/23
 
 **   Add --x-assign=fast option, and make it the default.
